--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 :root {
     color: #1f1f1f;
-    background-color: #d0d0d0;
+    background-color: #ffffff;
     width: 98%;
     margin-left: 1%;
     height: 98%;
-    margin-top: 1%;
 }
 
 @media (prefers-color-scheme: dark) {
